src/test/config/kind/backdoor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: DC_APP_REPLACEME-0
  namespace: atlassian
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: DC_APP_REPLACEME-0
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: 30008
---
apiVersion: v1
kind: Service
metadata:
  name: DC_APP_REPLACEME-1
  namespace: atlassian
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: DC_APP_REPLACEME-1
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: 30009
