src/test/config/kind/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: atlassian
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - name: registry-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32767
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
